Adição até ao Ex26

--- a/ex24/Makefile
+++ b/ex24/Makefile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: djoao <marvin@42.fr>                       +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/05/10 09:38:36 by djoao             #+#    #+#              #
+#    Updated: 2024/05/10 09:39:02 by djoao            ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = libft.a
 FLAGS = -Wall -Wextra -Werror
 HEADERS = ./includes/
